Remove height attribute from bottom button to avoid overflow of text

--- a/style.css
+++ b/style.css
@@ -100,7 +100,6 @@ a {
 }
 .signup button {
     border: 2px solid white;
-    height: 40px;
 }
 .first {
     font-weight: bold;
